--- a/DOM/task-13-final-project/style.css
+++ b/DOM/task-13-final-project/style.css
@@ -7,7 +7,7 @@
 #background{
     height:100vh;
     width: 100vw;
-    background-image: url("messageimage.jpg");
+    background-image: url("global-network-fm-logistic-1230x690.jpg");
     background-size: cover;
     display: flex;
     gap: 40px;
@@ -126,3 +126,36 @@ form{
       }
 }
 
+
+#display_box{
+    height: 460px;
+    min-width: 200px;
+    max-height: 1000px;
+    background-color: azure;
+    margin-top: 30px;
+    border-radius: 8px;
+    text-indent: 6px;
+}
+.usersList{
+  margin-top: 5px;
+  list-style-type: none;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.litag{
+    height: 25px;
+    width: 280px;
+   background-color: rgb(124, 100, 230);
+   border-radius: 8px;
+   box-shadow: 1px 5px 3px black;
+}
+.delete{  
+ background-color: rgb(226, 47, 16);
+ 
+}
+.delete:hover{
+    transform: scale(1.3);
+    cursor: pointer;
+}
